--- a/templates/add_page.html
+++ b/templates/add_page.html
@@ -23,7 +23,7 @@
             <input class="input-xlarge" type="text" placeholder="title" id="title" name="title"><br/>
             <input class="input-xlarge" type="text" placeholder="the url" id="link" name="link"><br/>
             <span class="help-block"><h4>use ',' or blank to seperate tags</h4></span>
-            <input class="input-xlarge" type="text" placeholder="tags" id="tag" name="tag"><br />
+            <input class="input-xlarge" type="text" placeholder="tags" id="tags" name="tags"><br />
             <textarea class="input-xlarge" placeholder="note can be omitted." rows="8" id="note" name="note"></textarea><br/>
             <button type="submit" class="btn">Submit</button>
         </fieldset>
