--- a/templates/main.html
+++ b/templates/main.html
@@ -4,42 +4,61 @@
     <title>KeyNote</title>
     <!-- Bootstrap -->
     <link href="{{url_for('static',filename='bootstrap/css/bootstrap.min.css')}}" rel="stylesheet" media="screen">
+    <style>
+        div#pageheader{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <div class="page-header">
-          <h1>Simple bookmark and keynote</h1>
-        </div>
-        <div class="row">
-            <div class="span2">
-                <button type="button" class="btn btn-primary btn-large" onclick="location.href='/add_page'">Add</button>
-            </div>
-            <div class="span1"><h5>order by</h5></div>
-            <div class="btn-toolbar offset1">
-                <div class="btn-group">
-                    <button class="btn" onclick="location.href='/marknote/time'">time</button>
-                    <button class="btn" onclick="location.href='/marknote/title'">title</button>
-                    <button class="btn" onclick="location.href='/marknote/tag'">tag</button>
-                    <button class="btn" onclick="location.href='/marknote/random'">random</button>
-                </div>
-            </div>
-        </div>
-        {% for row in data %}
+    <div class="page-header" id="pageheader" >
+            <h1>Simple bookmark and keynote</h1>
+    </div>
+    <div class="container-fluid">
         <div class="row">
             <div class="span5">
-            <h4>
-                {% if row.link != "" %}
-                    <a href="{{row.link}}">{{row.title}}</a>
-                {% else %}
-                    {{row.title}}
-                {% endif %}
-            </h4>
+                <button type="button" class="btn btn-primary btn-large" onclick="location.href='/add_page'">Add</button>
             </div>
-            <div class="offset1">
-            <h5><a href="/edit/{{row.id}}">edit</a></h5>
+            <div class="span10">
+                <div class="row">
+                    <div class="span1"><h5>order by</h5></div>
+                    <div class="btn-toolbar offset1">
+                        <div class="btn-group">
+                            <button class="btn" onclick="location.href='/marknote/time'">time</button>
+                            <button class="btn" onclick="location.href='/marknote/title'">title</button>
+                            <button class="btn" onclick="location.href='/marknote/tag'">tag</button>
+                            <button class="btn" onclick="location.href='/marknote/random'">random</button>
+                        </div>
+                    </div>
+                </div>
+                {% for row in data %}
+                <div class="row">
+                    <div class="span7">
+                        <blockquote>
+                            {% if row.link != "" %}
+                                <h3><a href="{{row.link}}">{{row.title}}</a></h3>
+                            {% else %}
+                                <h3>{{row.title}}</h3>
+                            {% endif %}
+
+                            {% set tags = row.tag.split(',') %}
+                            {% if tags[0] != "" %}
+                                <small>
+                                    <a href="/tags/{{row.tag[0]}}">{{tags[0]}}</a>
+                                {% for tag in tags[1:] %}
+                                    <a href="/tags/{{tag}}">,{{tag}}</a>
+                                {% endfor %}
+                                </small>
+                            {% endif %}
+                        </blockquote>
+                    </div>
+                    <div class="span1">
+                        <h5><a href="/edit/{{row.id}}"><img src="{{url_for('static',filename='editicon.png')}}" /></a></h5>
+                    </div>
+                </div>
+                {% endfor %}
             </div>
         </div>
-        {% endfor %}
     </div>
     <script src="{{url_for('static',filename='bootstrap/js/bootstrap.min.js')}}"></script>
     <script src="{{url_for('static',filename='jquery-1.8.3.min.js')}}"></script>
