--- a/templates/main_tags.html
+++ b/templates/main_tags.html
@@ -16,8 +16,16 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="span5">
-                <button type="button" class="btn btn-primary btn-large" onclick="location.href='/add_page'">Add</button>
+            <div class="span4">
+                <div>
+                    <button type="button" class="btn btn-primary btn-large" onclick="location.href='/add_page'">Add</button>
+                </div>
+                <br />
+                <div>
+                    <form action="/marknote/search">
+                        <input type="text" placeholder="search" id="search" name="search">
+                    </form>
+                </div>
             </div>
             <div class="span10">
                 <div class="row">
