--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -21,7 +21,7 @@
             </div>
             <div class="span10">
                 <div>
-                    <button class="btn" onclick="location.href='/marknote/tag/1'">Back</button>
+                    <button class="btn" onclick="location.href='/marknote'">Back</button>
                 </div>
                 {% for row in data %}
                 <div class="row">
