--- a/templates/main.html
+++ b/templates/main.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
-<html>
-<head>
+<html> <head>
     <title>KeyNote</title>
     <!-- Bootstrap -->
     <link href="{{url_for('static',filename='bootstrap/css/bootstrap.min.css')}}" rel="stylesheet" media="screen">
@@ -74,11 +73,28 @@
                             </small>
                             {% endif %}
                         </blockquote>
+                        {% set note = row.note.split("\n") %}
+                        {% if note[0] != "" %}
                         <div id="collapse{{row.id}}" class="collapse">
-                            {% for note in row.note.split("\n") %}
-                                {{note}}<br/>
+                            {% set isimg = False %}
+                            {% set imgn = 0 %}
+                            {% set imgs = row.img.split(',') %}
+                            {% for a in note %}
+                                {% if '<img>' in a: %}
+                                    {% set isimg = True %}
+                                {% elif '</img>' in a: %}
+                                    {% set isimg = False %}
+                                {% else : %}
+                                    {% if isimg :%}
+                                        <img src="{{url_for('static',filename='images/'+imgs[imgn])}}" /><br />
+                                        {% set imgn = imgn+1 %}
+                                    {% else %}
+                                        {{a}}<br/>
+                                    {% endif %}
+                                {% endif %}
                             {% endfor %}
                         </div>
+                        {% endif %}
                     </div>
                     <div class="span1">
                         <button type="button" class="btn" data-toggle="collapse" data-target="#collapse{{row.id}}">
