--- a/templates/add_page.html
+++ b/templates/add_page.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <script type="text/javascript">
+    <script type="text/javascript" type="text/javascript">
         function check_validity(){
             document.addform.submit();
         }
@@ -32,7 +32,7 @@
             <textarea class="input-xxlarge" placeholder="note can be omitted." rows="20" id="note" name="note"></textarea><br/>
             <button type="button" class="btn" onclick="check_validity()">Submit</button>
     </form>
-    <script src="{{url_for('static',filename='bootstrap/js/bootstrap.min.js')}}"></script>
-    <script src="{{url_for('static',filename='jquery-1.8.3.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static',filename='bootstrap/js/bootstrap.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static',filename='jquery-1.8.3.min.js')}}"></script>
 </body>
 </html>
