--- a/templates/edit_page.html
+++ b/templates/edit_page.html
@@ -14,7 +14,7 @@
         margin: 0 auto -60px;
     }
     </style>
-    <script>
+    <script type="text/javascript">
         function check_validity(){
             document.editform.submit();
         }
@@ -36,7 +36,7 @@
             </div>
         </fieldset>
     </form>
-    <script src="{{url_for('static',filename='bootstrap/js/bootstrap.min.js')}}"></script>
-    <script src="{{url_for('static',filename='jquery-1.8.3.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static',filename='bootstrap/js/bootstrap.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static',filename='jquery-1.8.3.min.js')}}"></script>
 </body>
 </html>
