--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -52,7 +52,7 @@
             </div>
         </div>
     </div>
-    <script src="{{url_for('static',filename='bootstrap/js/bootstrap.min.js')}}"></script>
-    <script src="{{url_for('static',filename='jquery-1.8.3.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static',filename='bootstrap/js/bootstrap.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static',filename='jquery-1.8.3.min.js')}}"></script>
 </body>
 </html>
