--- a/templates/tags.html
+++ b/templates/tags.html
@@ -9,6 +9,16 @@
             text-align: center;
         }
     </style>
+    <script type="text/javascript" src="{{url_for('static',filename='bootstrap/js/bootstrap.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static',filename='jquery-1.8.3.min.js')}}"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('.init_hide').hide();
+        });
+        function unfold(colid){
+            $(colid).toggle(300);
+        }
+    </script>
 </head>
 <body>
     <div class="page-header" id="pageheader" >
@@ -21,11 +31,12 @@
             </div>
             <div class="span10">
                 <div>
-                    <button class="btn" onclick="location.href='/marknote/tag/1'">Back</button>
+                    <button class="btn" onclick="history.back()">Back</button>
                 </div>
+                <br />
                 {% for row in data %}
                 <div class="row">
-                    <div class="span7">
+                    <div class="span7 well well-small">
                         <blockquote>
                             {% if row.link != "" %}
                                 <h3><a href="{{row.link}}">{{row.title}}</a></h3>
@@ -38,21 +49,53 @@
                                 <a href="/marknote/tags/{{tags[0]}}">{{tags[0]}}</a>
                                 {% for tag in tags[1:] %}
                                     {% if tag != '' %}
-                                    <a href="/marknote/tags/{{tag}}">,{{tag}}</a>
+                                     | <a href="/marknote/tags/{{tag}}">{{tag}}</a>
                                     {% endif %}
                                 {% endfor %}
                             {% endif %}
                         </blockquote>
+                        {% set note = row.note.split("\n") %}
+                        {% if note[0] != "" %}
+                        <div id="collapse{{row.id}}" class="init_hide">
+                            {% set isimg = False %}
+                            {% set islink = False %}
+                            {% set imgn = 0 %}
+                            {% set imgs = row.img.split(',') %}
+                            {% for a in note %}
+                                {% if '<img>' in a: %}
+                                    {% set isimg = True %}
+                                {% elif '</img>' in a: %}
+                                    {% set isimg = False %}
+                                {% elif '<link>' in a: %}
+                                    {% set islink = True %}
+                                {% elif '</link>' in a: %}
+                                    {% set islink = False %}
+                                {% else : %}
+                                    {% if isimg : %}
+                                        <a href="{{url_for('static',filename='images/'+imgs[imgn])}}" target="_blank">
+                                        <img src="{{url_for('static',filename='images/'+imgs[imgn])}}" /></a><br />
+                                        {% set imgn = imgn+1 %}
+                                    {% elif islink : %}
+                                        <a href="{{a}}" target="_blank" >link</a><br />
+                                    {% else %}
+                                        {{a}}<br />
+                                    {% endif %}
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+                        {% endif %}
                     </div>
-                    <div class="span1">
-                        <h5><a href="/edit/{{row.id}}"><img src="{{url_for('static',filename='editicon.png')}}" /></a></h5>
+                    <div>
+                        <img src="{{url_for('static',filename='more.png')}}" onclick="unfold('#collapse{{row.id}}')" />
+                    </div>
+                    <div>
+                        <h5><a href="/edit/{{row.id}}"><img src="{{url_for('static',filename='edit.png')}}" /></a></h5>
                     </div>
                 </div>
                 {% endfor %}
             </div>
         </div>
     </div>
-    <script src="{{url_for('static',filename='bootstrap/js/bootstrap.min.js')}}"></script>
-    <script src="{{url_for('static',filename='jquery-1.8.3.min.js')}}"></script>
+    
 </body>
 </html>
