--- a/templates/main.html
+++ b/templates/main.html
@@ -4,6 +4,9 @@
     <title>KeyNote</title>
     <!-- Bootstrap -->
     <link href="{{url_for('static',filename='bootstrap/css/bootstrap.min.css')}}" rel="stylesheet" media="screen">
+    <link href="{{url_for('static',filename='synhigh/css/shCore.css')}}" rel="stylesheet" type="text/css">
+    <link href="{{url_for('static',filename='synhigh/styles/shCoreDefault.css')}}" rel="stylesheet" type="text/css">
+    <link href="{{url_for('static',filename='synhigh/css/shThemeDefault.css')}}" rel="stylesheet" type="text/css">
     <style>
         div#pageheader{
             text-align: center;
@@ -11,18 +14,29 @@
     </style>
     <script type="text/javascript" src="{{url_for('static',filename='jquery-1.8.3.min.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static',filename='bootstrap/js/bootstrap.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static',filename='synhigh/scripts/shCore.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static',filename='synhigh/scripts/shBrushCpp.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static',filename='synhigh/scripts/shBrushJScript.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static',filename='synhigh/scripts/shBrushPython.js')}}"></script>
     <script type="text/javascript">
         $(document).ready(function(){
             $('.tohide').hide();
         });
-
         function unfold(collid){
             $(collid).toggle(200);
         }
+        function del_confirm(noteid){
+            var r=confirm("Sure to delete it?");
+            if(r){
+                location.href="/delete/"+noteid;
+            }
+        }
+        SyntaxHighlighter.config.tagName="sh";
+        SyntaxHighlighter.all();
     </script>
 </head>
 <body>
-    
+            
     <div class="page-header" id="pageheader" >
             <h1>Simple bookmark and keynote</h1>
     </div>
@@ -90,6 +104,7 @@
                             {% set isimg = False %}
                             {% set islink = False %}
                             {% set imgn = 0 %}
+                            {% set linkname = "" %}
                             {% set imgs = row.img.split(',') %}
                             {% for a in note %}
                                 {% if '<img>' in a: %}
@@ -100,13 +115,29 @@
                                     {% set islink = True %}
                                 {% elif '</link>' in a: %}
                                     {% set islink = False %}
+                                {% elif '<code' in a : %}
+                                    {% set iscode = True %}
+                                    {% if ':c>' in a : %}
+                                        <sh class="brush:c">
+                                    {% elif ':python^' in a : %}
+                                        <sh class="brush:py">
+                                    {% endif %}
+                                {% elif '</code>' in a : %}
+                                    {% set iscode = False %}
+                                    </sh>
                                 {% else : %}
                                     {% if isimg : %}
                                         <a href="{{url_for('static',filename='images/'+imgs[imgn])}}" target="_blank">
                                         <img src="{{url_for('static',filename='images/'+imgs[imgn])}}" /></a><br />
                                         {% set imgn = imgn+1 %}
                                     {% elif islink : %}
-                                        <a href="{{a}}" target="_blank" >link</a><br />
+                                        {% if '|||' in a : %}
+                                            <a href="{{a[a.find('http'):]}}" target="_blank" >{{a[0:a.find('|||')]}}</a><br />
+                                        {% else %}
+                                            <a href="{{a}}" target="_blank" >link</a><br />
+                                        {% endif %}
+                                    {% elif iscode : %}
+                                        {{a}}
                                     {% else %}
                                         {{a}}<br />
                                     {% endif %}
@@ -121,10 +152,15 @@
                     <div>
                         <h5><a href="/edit/{{row.id}}"><img src="{{url_for('static',filename='edit.png')}}" /></a></h5>
                     </div>
+                    <div>
+                        <h5><img src="{{url_for('static',filename='trash.png')}}" onclick="del_confirm({{row.id}})" /></h5>
+                    </div>
                 </div>
                 {% endfor %}
             </div>
         </div>
     </div>
+    <script type="text/javascript">
+    </script>
     </body>
 </html>
