--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -9,6 +9,17 @@
             text-align: center;
         }
     </style>
+    <script type="text/javascript" src="{{url_for('static',filename='bootstrap/js/bootstrap.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static',filename='jquery-1.8.3.min.js')}}"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('.tohide').hide();
+        });
+
+        function unfold(collid){
+            $(collid).toggle(200);
+        }
+    </script>
 </head>
 <body>
     <div class="page-header" id="pageheader" >
@@ -17,7 +28,15 @@
     <div class="container-fluid">
         <div class="row">
             <div class="span4">
-                <button type="button" class="btn btn-primary btn-large" onclick="location.href='/add_page'">Add</button>
+                <div>
+                    <button type="button" class="btn btn-primary btn-large" onclick="location.href='/add_page'">Add</button>
+                </div>
+                <br />
+                <div>
+                    <form action="/marknote/search" method="GET">
+                        <input type="text" placeholder="search" id="search" name="search">
+                    </form>
+                </div>
             </div>
             <div class="span10">
                 <div>
@@ -25,7 +44,7 @@
                 </div>
                 {% for row in data %}
                 <div class="row">
-                    <div class="span7">
+                    <div class="span7 well well-small">
                         <blockquote>
                             {% if row.link != "" %}
                                 <h3><a href="{{row.link}}">{{row.title}}</a></h3>
@@ -38,21 +57,52 @@
                                 <a href="/marknote/tags/{{tags[0]}}">{{tags[0]}}</a>
                                 {% for tag in tags[1:] %}
                                     {% if tag != '' %}
-                                    <a href="/marknote/tags/{{tag}}">,{{tag}}</a>
+                                     | <a href="/marknote/tags/{{tag}}">{{tag}}</a>
                                     {% endif %}
                                 {% endfor %}
                             {% endif %}
                         </blockquote>
+                        {% set note = row.note.split("\n") %}
+                        {% if note[0] != "" %}
+                        <div id="collapse{{row.id}}" class="tohide">
+                            {% set isimg = False %}
+                            {% set islink = False %}
+                            {% set imgn = 0 %}
+                            {% set imgs = row.img.split(',') %}
+                            {% for a in note %}
+                                {% if '<img>' in a: %}
+                                    {% set isimg = True %}
+                                {% elif '</img>' in a: %}
+                                    {% set isimg = False %}
+                                {% elif '<link>' in a: %}
+                                    {% set islink = True %}
+                                {% elif '</link>' in a: %}
+                                    {% set islink = False %}
+                                {% else : %}
+                                    {% if isimg : %}
+                                        <a href="{{url_for('static',filename='images/'+imgs[imgn])}}" target="_blank">
+                                        <img src="{{url_for('static',filename='images/'+imgs[imgn])}}" /></a><br />
+                                        {% set imgn = imgn+1 %}
+                                    {% elif islink : %}
+                                        <a href="{{a}}" target="_blank" >link</a><br />
+                                    {% else %}
+                                        {{a}}<br />
+                                    {% endif %}
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+                        {% endif %}
                     </div>
-                    <div class="span1">
-                        <h5><a href="/edit/{{row.id}}"><img src="{{url_for('static',filename='editicon.png')}}" /></a></h5>
+                    <div>
+                        <h5><a href="/edit/{{row.id}}"><img src="{{url_for('static',filename='edit.png')}}" /></a></h5>
+                    </div>
+                    <div>
+                        <h5><img src="{{url_for('static',filename='more.png')}}" onclick="unfold('#collapse{{row.id}}')"/></h5>
                     </div>
                 </div>
                 {% endfor %}
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="{{url_for('static',filename='bootstrap/js/bootstrap.min.js')}}"></script>
-    <script type="text/javascript" src="{{url_for('static',filename='jquery-1.8.3.min.js')}}"></script>
 </body>
 </html>
