fix little bugs

--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -47,7 +47,7 @@
                     <div class="span7 well well-small">
                         <blockquote>
                             {% if row.link != "" %}
-                                <h3><a href="{{row.link}}">{{row.title}}</a></h3>
+                                <h3><a href="{{row.link}}" target="_blank">{{row.title}}</a></h3>
                             {% else %}
                                 <h3>{{row.title}}</h3>
                             {% endif %}
@@ -84,7 +84,11 @@
                                         <img src="{{url_for('static',filename='images/'+imgs[imgn])}}" /></a><br />
                                         {% set imgn = imgn+1 %}
                                     {% elif islink : %}
-                                        <a href="{{a}}" target="_blank" >link</a><br />
+                                        {% if '|||' in a : %}
+                                            <a href="{{a[a.find('http'):]}}" target="_blank" >{{a[0:a.find('|||')]}}</a><br />
+                                        {% else %}
+                                            <a href="{{a}}" target="_blank" >link</a><br />
+                                        {% endif %} 
                                     {% else %}
                                         {{a}}<br />
                                     {% endif %}
