--- a/templates/main.html
+++ b/templates/main.html
@@ -21,6 +21,7 @@
     <script type="text/javascript">
         var w = $(window);
         var d = $(document);
+        var current_page = {{page}};
         $(document).ready(function(){
             $('.tohide').hide();
         });
@@ -33,12 +34,19 @@
                 location.href="/delete/"+noteid;
             }
         }
+        /*
+        function loadmore(data){
+            alert(current_page);
+            $.("#loadee").append(data);
+        }*/
         function atbottom(){
-            if(w.scrollTop()+w.height()>=d.height()-100)
-                alert("atbottom");
+            if(w.scrollTop()+w.height()>=d.height()-100){
+                alert(current_page);
+                //$.get("http://127.0.0.1:5000/marknote/get_load",{"orderby":"time","offset":current_page++}).done(loadmore);
+            }
         }
         w.scroll(atbottom);
-        SyntaxHighlighter.config.tagName="sh";
+        SyntaxHighlighter.config.tagName="sh";er
         SyntaxHighlighter.all();
     </script>
 </head>
@@ -59,7 +67,7 @@
                     </form>
                 </div>
             </div>
-            <div class="span10">
+            <div class="span10" id="loadee">
                 <div class="row">
                     <div class="span1"><h5>order by</h5></div>
                     <div class="btn-toolbar span4">
