--- a/templates/main.html
+++ b/templates/main.html
@@ -56,6 +56,9 @@
                         <input type="text" placeholder="search" id="search" name="search">
                     </form>
                 </div>
+                <div>
+                    <button type="button" class="btn btn-success btn-large" onclick="location.href='/copy'">Copy</button>
+                </div>
             </div>
             <div class="span10" id="loadee">
                 <div class="row">
